--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ body {
   font-size: 14px;
 }
 
+.countDown {
+  background-color: black;
+    color: white;
+    font-size: 30px;
+    font-family: Dubai;
+}
+
+.totalTaskTime{
+
+
+}
 .recipe {
   padding: 1em;
 }
