color changes on countdown

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@ body {
 }
 
 .totalTaskTime{
-
-
+  background-color: black;
+  color: white;
+  font-size: 30px;
+  font-family: Dubai;
 }
 .recipe {
   padding: 1em;
