--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,29 @@
 body {
     font-size: 14px;
-    background-color: black;
+    background-color: gray;
+}
+
+.without_ampm::-webkit-datetime-edit-ampm-field {
+    display: none;
+}
+input[type=time]::-webkit-clear-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    -ms-appearance:none;
+    appearance: none;
+    margin: -10px;
+}
+
+.countdownTable {
+    background: black;
+    color: black;
 }
 
 .countDown {
     background-color: black;
     color: white;
-    font-size: 30px;
+    font-size: 50px;
     font-family: Dubai;
     border: none;
     text-align: center;
@@ -15,85 +32,67 @@ body {
 .totalTaskTime {
     background-color: black;
     color: white;
-    font-size: 30px;
+    font-size: 50px;
     font-family: Dubai;
     border: none;
     text-align: center;
 }
 
-.recipe {
-    padding: 1em;
-    background-color: black;
-}
-
-.recipe__title {
-    color: black;
-    margin-top: 0;
-}
-
-.recipe__info {
+.topSectionBorder {
     vertical-align: top;
     text-align: right;
     padding: 0 1em 0 0;
     margin: 0 1.3em 0 0;
     font-weight: bold;
     color: #454545;
-    border-right: 1px dotted #EEE;
     width: 300px;
     float: left;
     color: black;
     background-color: black;
 }
 
-.recipe__ingredients {
-    float: left;
+.todoListContainer {
+
     color: black;
-    background-color: black;
+    background-color: gray;
 }
 
-.recipe-table {
+.todoList {
     position: relative;
     padding: 1em;
     border: 0px solid #DDD;
     box-shadow: 0 15px 10px -10px rgba(31, 31, 31, 0.5);
     z-index: 0;
-
+    background-color: #CCCCCC;
 }
 
-.recipe-table__cell {
+.todoListCell {
     vertical-align: top;
     padding: 3px 5px;
-    background-color: black;
+    background-color: #CCCCCC;
+    color: black;
 }
 
-.recipe__text-field {
+.taskInputFields {
     margin: 0;
     padding: .45em 0.92em;
     font-size: 1em;
     line-height: 1.4;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     background-image: none;
-    border: 0px solid #CCC;
+    border: 0px solid #CCCCCC;
     border-left: 0px solid #CCC;
 }
 
-.recipe-table__add-row {
-    margin-top: 0;
-    position: relative;
-    border-top: 0px solid #EEE;
-    z-index: 8;
-
-}
-
-.recipe-table__add-row-btn {
+.addRowButton {
     display: block;
     cursor: pointer;
-    position: absolute;
+    position: center;
     right: 0;
     left: 0;
-    width: 4em;
-    margin: 0 auto;
+    width: 5em;
+    margin: auto;
     text-align: center;
     opacity: 0.5;
     color: #fff;
@@ -106,16 +105,16 @@ body {
     transition: all .3s;
 }
 
-.recipe-table__add-row-btn:hover {
+.addRowButton:hover {
     opacity: 1;
     background-color: forestgreen;
 }
 
-.recipe-table__del-row-btn {
+.delRowButton {
     opacity: 0.5;
     cursor: pointer;
     display: inline-block;
-    padding: .45em 0.92em;
+    padding: .45em .92em;
     font-size: 1em;
     line-height: 1.4;
     border: 1px solid lightgray;
@@ -128,20 +127,22 @@ body {
 
 }
 
-.recipe-table__del-row-btn:hover {
+.delRowButton:hover {
     background: crimson;
     color: lightgray;
     opacity: 1;
+    border-radius: 8px;
 }
 
 .drag-handler {
     width: 1.4em;
     position: relative;
-    background: white linear-gradient(45deg, black, black 2px, #4e5259 2px, #fff 4px, black 4px, black 9px, #4e5259 9px, #fff 11px, black 11px, black 16px, #4e5259 16px, #fff 18px, black 18px, black 22px);
+    background: black linear-gradient(45deg, black, black 2px, #4e5259 2px, #fff 4px, black 4px, black 9px,
+    #4e5259 9px, #fff 11px, black 11px, black 16px, #4e5259 16px, #fff 18px, black 18px, black 22px);
     background-size: 10px 20px;
     cursor: grab;
-    border-top: 0.5px solid #4e5259;
-    border-bottom: 0.5px solid #4e5259;
+    border-top: 0px solid #4e5259;
+    border-bottom: 0px solid #4e5259;
     opacity: 0.5;
     transition: all .3s;
 }
@@ -149,7 +150,7 @@ body {
 .drag-handler:hover {
     width: 1.4em;
     position: relative;
-    background: orange linear-gradient(45deg, black, black 2px, #FF2400 2px, #fff 4px, black 4px, black 9px, #FF2400 9px, #fff 11px, black 11px, black 16px, #FF2400 16px, #fff 18px, black 18px, black 22px);
+    background: #FFA500 linear-gradient(45deg, black, black 2px, #FFA500 2px, #FFA500 4px, black 4px, black 9px, #FFA500 9px, #FFA500 11px, black 11px, black 16px, #FFA500 16px, #FFA500 18px, black 18px, black 22px);
     background-size: 10px 20px;
     cursor: grab;
     opacity: 1.0;
@@ -166,6 +167,3 @@ body {
     text-align: center;
 }
 
-.countdownTable td {
-    background: black;
-}
