--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,13 @@
 body {
     font-size: 14px;
-    background-color: gray;
-}
-
-.without_ampm::-webkit-datetime-edit-ampm-field {
-    display: none;
-}
-input[type=time]::-webkit-clear-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
-    -ms-appearance:none;
-    appearance: none;
-    margin: -10px;
+    background-color: black;
 }
 
 .countdownTable {
     background: black;
     color: black;
+    width: 100%;
+
 }
 
 .countDown {
@@ -33,12 +23,12 @@ input[type=time]::-webkit-clear-button {
     background-color: black;
     color: white;
     font-size: 50px;
-    font-family: Dubai;
+    font-family: "Dubai";
     border: none;
     text-align: center;
 }
 
-.topSectionBorder {
+.topSection {
     vertical-align: top;
     text-align: right;
     padding: 0 1em 0 0;
@@ -49,20 +39,23 @@ input[type=time]::-webkit-clear-button {
     float: left;
     color: black;
     background-color: black;
+    width: 100%;
+    text-align: center;
 }
 
 .todoListContainer {
 
     color: black;
-    background-color: gray;
+    background-color: black;
+    width:100%;
 }
 
 .todoList {
-    position: relative;
+    position: center;
     padding: 1em;
     border: 0px solid #DDD;
     box-shadow: 0 15px 10px -10px rgba(31, 31, 31, 0.5);
-    z-index: 0;
+    z-index: 1;
     background-color: #CCCCCC;
 }
 
@@ -91,27 +84,29 @@ input[type=time]::-webkit-clear-button {
     position: center;
     right: 0;
     left: 0;
-    width: 5em;
+    width: 80px;
     margin: auto;
     text-align: center;
-    opacity: 0.5;
+    opacity: 0.7;
     color: #fff;
     border: 1px solid lightgray;
     border-bottom-right-radius: 1em;
     border-bottom-left-radius: 1em;
-    background: gray;
+    background: forestgreen;
     height: 1.5em;
     line-height: 1.5em;
     transition: all .3s;
+    z-index: 0;
 }
 
 .addRowButton:hover {
     opacity: 1;
     background-color: forestgreen;
+
 }
 
 .delRowButton {
-    opacity: 0.5;
+    opacity: 0.2;
     cursor: pointer;
     display: inline-block;
     padding: .45em .92em;
@@ -122,8 +117,8 @@ input[type=time]::-webkit-clear-button {
     text-decoration: none;
     transition: all .3s;
     text-align: center;
-    background: gray;
-    border-radius: 8px;
+    background: crimson;
+    border-radius: 4px;
 
 }
 
@@ -131,7 +126,7 @@ input[type=time]::-webkit-clear-button {
     background: crimson;
     color: lightgray;
     opacity: 1;
-    border-radius: 8px;
+    border-radius: 4px;
 }
 
 .drag-handler {
@@ -141,16 +136,19 @@ input[type=time]::-webkit-clear-button {
     #4e5259 9px, #fff 11px, black 11px, black 16px, #4e5259 16px, #fff 18px, black 18px, black 22px);
     background-size: 10px 20px;
     cursor: grab;
-    border-top: 0px solid #4e5259;
-    border-bottom: 0px solid #4e5259;
+    border-left: 2px solid #CCCCCC;
+    border-top: 2px solid #CCCCCC;
+    border-bottom: 2px solid #CCCCCC;
+    border-radius: 4px;
     opacity: 0.5;
     transition: all .3s;
+
 }
 
 .drag-handler:hover {
     width: 1.4em;
     position: relative;
-    background: #FFA500 linear-gradient(45deg, black, black 2px, #FFA500 2px, #FFA500 4px, black 4px, black 9px, #FFA500 9px, #FFA500 11px, black 11px, black 16px, #FFA500 16px, #FFA500 18px, black 18px, black 22px);
+    background: #FFA500 linear-gradient(45deg, black, black 2px, #FFD700 2px, #FFD700 4px, black 4px, black 9px, #FFD700 9px, #FFD700 11px, black 11px, black 16px, #FFD700 16px, #FFD700 18px, black 18px, black 22px);
     background-size: 10px 20px;
     cursor: grab;
     opacity: 1.0;
@@ -162,8 +160,5 @@ input[type=time]::-webkit-clear-button {
     background-size: 10px 20px;
 }
 
-.tasktime, .tasks {
-    width: 100%;
-    text-align: center;
-}
+
 
